---------------------------------------------------------------------------------------------------
Version: 1.4.2
  Bugfixes:
    - Fixed gui could become orphaned on upgrade

---------------------------------------------------------------------------------------------------
Version: 1.4.1
  Bugfixes:
    - Fixed 60 minute evolution change counter
    - Fixed invalid key to next due to player leaving game

---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 20. 03. 2022
  Improvements:
    - Added GUI shortcut with mod setting toggle
    - Added 5, 30, 60 minute changes in evolution to displayed stats
  Tweaks:
    - Switched license to GPLv3

---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 27. 12. 2021
  Improvements:
    - Added mod setting to control evolution calculation accuracy with an auto setting to calculate accuracy upto 80 hour game length, above 80 hrs and you may want to manually configure values.
    - Added mod setting to control evolution per worm killed
  Tweaks:
    - Added some additional information around the console command /rampantEvolution
    - Increased frequency to every 2 minutes for stats grabbed from factorio engine for computing deltas
  Bugfixes:
    - Fixed totalCounts were only set when previousCount didn't exist, which caused over time evolution to spiral as the deltas kept on growing (Thanks garrotte13)

---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 16. 4. 2021
  Improvements:
    - Added a minimum evolution setting based off of the peak evolution reached
  Tweaks:
    - Doubled processing speed with a slightly lower accuracy historical reconstruction of evolution
  Bugfixes:
    - Historical ticks not being included in recalculating evolution
