@@ -2,6 +2,7 @@
 Version: 1.4.2
   Bugfixes:
     - Fixed gui could become orphaned on upgrade
+    - Fixed invalid key to next due to player leaving game, removed player index conditional
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.1
